@@ -160,7 +160,7 @@ void CDVDPlayerVideo::Process()
     if (dvdstate & DVDPACKET_MESSAGE_NOSKIP)
     {
       // libmpeg2 is also returning incomplete frames after a dvd cell change
-      // so the first few pictures are not the coreect ones to display in some cases
+      // so the first few pictures are not the correct ones to display in some cases
       // just display those together with the correct one.
       // (setting it to 2 will skip some menu stills, 5 is working ok for me).
       m_iNrOfPicturesNotToSkip = 5;
